--- a/sass/components/_recipes.scss
+++ b/sass/components/_recipes.scss
@@ -1,26 +1,28 @@
 #recipes {
     margin-top: 25px;
-    display: grid;
-    grid-template-columns: repeat(3, minmax(380px, 380px));
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
     justify-content: center;
-    gap: 50px;
+    row-gap: 30px;
 
     .recipe {
 
         background: #E7E7E7;
         border-radius: 5px;
-        width: 380px;
-        margin-right: 50px;
+        width: 350px;
+        height: 350px;
+        overflow: hidden;
 
         &-background {
             background: #C7BEBE;
-            width: 380px;
+            width: 400px;
             height: 178px;
             border-radius: 5px 5px 0 0;
         }
 
         &-body {
-            margin: 20px;
+            padding: 20px;
             display: grid;
             grid-template-columns: repeat(2, minmax(0, 1fr));
         }
@@ -65,8 +67,28 @@
 
 }
 
-@media only screen and (max-width: 400px) {
-    * {
-        color: red;
+@media only screen and (min-width: 768px) {
+    
+    #recipes {
+        column-gap: 30px;
+        .recipe {
+        }
     }
+  
+}
+
+@media only screen and (min-width: 1024px) {
+    
+    #recipes {
+        display: grid;
+        grid-template-columns: repeat(3, minmax(400px, 400px));
+        column-gap: 50px;
+
+        .recipe {
+            width: 400px;
+
+        }
+
+    }
+  
 }
